feat: add registry leave flow and backend remove integration

--- a/_workers_next/src/locales/en.json
+++ b/_workers_next/src/locales/en.json
@@ -719,6 +719,9 @@
         "notNow": "Not now",
         "submitSuccess": "Submitted to navigator",
         "submitFailed": "Submission failed",
+        "leaveNow": "Leave navigator",
+        "leaveSuccess": "Left navigator",
+        "leaveFailed": "Failed to leave navigator",
         "statusJoined": "Joined",
         "statusNotJoined": "Not joined",
         "resubmit": "Resubmit",
