--- a/_workers_next/src/locales/zh.json
+++ b/_workers_next/src/locales/zh.json
@@ -719,6 +719,9 @@
         "notNow": "暂不加入",
         "submitSuccess": "已提交到导航",
         "submitFailed": "提交失败",
+        "leaveNow": "退出导航",
+        "leaveSuccess": "已退出导航",
+        "leaveFailed": "退出失败",
         "statusJoined": "已加入",
         "statusNotJoined": "未加入",
         "resubmit": "重新提交",
