--- a/_workers_next/src/locales/zh.json
+++ b/_workers_next/src/locales/zh.json
@@ -560,7 +560,19 @@
             "selectedCount": "已选: {{count}}",
             "confirmBatchDelete": "确认删除选中的 {{count}} 个卡密？",
             "confirmAddTitle": "确认添加卡密",
-            "confirmAddDescription": "即将添加 {{count}} 条卡密，是否继续？"
+            "confirmAddDescription": "即将添加 {{count}} 条卡密，是否继续？",
+            "apiTitle": "卡密 API 自动补货",
+            "apiHint": "保存后会自动尝试拉取 1 条卡密。订单发货成功后也会自动补 1 条卡密。",
+            "apiUrl": "API 地址",
+            "apiToken": "API Token（可选）",
+            "apiTokenPlaceholder": "留空则不携带 Authorization",
+            "apiEnabled": "已启用",
+            "apiDisabled": "已停用",
+            "apiPullOne": "手动拉取 1 条",
+            "apiPullSuccess": "已从 API 拉取 1 条卡密",
+            "apiPullFailed": "API 拉取失败",
+            "apiAutoPulled": "配置已保存，并已自动拉取 1 条卡密",
+            "apiAutoPullFailed": "配置已保存，但自动拉取失败"
         },
         "productForm": {
             "addTitle": "添加商品",
